# collectn

./: CMakeLists.txt  README.md  cpuinfo
include/: cpu.h  tools.h
src/: cpu.cpp  main.cpp  tools.cpp
